spring-boot-ymls/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  selector:
    app: spring-boot
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
