spring-boot-ymls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easy-recipes-svc
                port:
                  number: 80
          - path: /info
            pathType: Prefix
            backend:
              service:
                name: spring-boot-service
                port:
                  number: 80
